--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^6.5.3",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "bull": "^4.16.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethernet-ip": "^1.2.5",
