--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "set NODE_ENV=dev && node index.js",
-    "start:prod": "set NODE_ENV=production && node index.js",
+    "start:dev": "NODE_ENV=dev node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
