--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "ethernet-ip": "^1.2.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
     "modbus-serial": "^8.0.16",
     "moment": "^2.30.1",
     "mysql2": "^3.9.7",
